--- a/midterm-practice.Rmd
+++ b/midterm-practice.Rmd
@@ -272,6 +272,15 @@ sampledTranscriptData$學系 <- str_replace(sampledTranscriptData$學系,"4","")
 sampledTranscriptData$學系 
 # sampledTranscriptData$學系 
 ```
+```{r ans3}
+#[方法一]
+sampledTranscriptData$學系 <- str_replace(sampledTranscriptData$系級,"[:digit:]","")
+sampledTranscriptData$學系
+#[方法二]
+sampledTranscriptData$學系 <- str_replace(sampledTranscriptData$系級,"[1234]","")
+
+sampledTranscriptData$學系
+```
 
 ### 7.4 轉系生
 學號是一入學就決定，不管後來有沒有轉系。 請找出外系轉入經濟系的學生學號，並存成changeMajorStudent答案物件。(由於資料一筆為一科成績，所以學號會重覆出現，要存入答案物件前請用`unique()`去除重覆學號)
